feat: organize and categorize Swagger interface routes
