# src/routes/activityRoutes.js
@@ -3,24 +3,62 @@ import * as ActivityController from "../controllers/activityController.js";
 const router = express.Router();
 
 // Activity List
-router.get("/", ActivityController.fetchAllActiveActivities);
-router.get("/:id", ActivityController.fetchActivityDetails);
-router.get("/category/:type", ActivityController.fetchActivitiesByCategory);
-
+router.get(
+  "/",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.fetchAllActiveActivities
+);
+router.get(
+  "/:id",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.fetchActivityDetails
+);
+router.get(
+  "/category/:type",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.fetchActivitiesByCategory
+);
 
 // Activity Create/Delete
-router.post("/", ActivityController.addNewActivity);
-router.put("/cancel/:id", ActivityController.cancelActivityRequest);
-router.post("/search", ActivityController.searchActivities);
+router.post(
+  "/",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.addNewActivity
+);
+router.put(
+  "/cancel/:id",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.cancelActivityRequest
+);
+router.post(
+  "/search",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.searchActivities
+);
 
 // Activity Comment
-router.post("/comment/:activity_id", ActivityController.fetchActivityComments);
-router.delete("/comment/:comment_id", ActivityController.removeActivityComment);
-
+router.post(
+  "/comment/:activity_id",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.fetchActivityComments
+);
+router.delete(
+  "/comment/:comment_id",
+  /* #swagger.tags = ['Activity'] */
+  ActivityController.removeActivityComment
+);
 
 // Google Map
 // Google 地址搜尋結果
-router.post('/geocode', ActivityController.googleMapGeocode);
-router.post('/autocomplete', ActivityController.googleAutocomplete);
+router.post(
+  "/geocode",
+  /* #swagger.ignore = true */
+  ActivityController.googleMapGeocode
+);
+router.post(
+  "/autocomplete",
+  /* #swagger.ignore = true */
+  ActivityController.googleAutocomplete
+);
 
 export default router;
