# src/routes/cartRoutes.js
@@ -4,21 +4,45 @@ import * as CartController from "../controllers/cartController.js";
 const router = express.Router();
 
 // 獲取購物車內容
-router.get("/:userId", CartController.fetchCartByUserId);
+router.get(
+  "/:userId",
+  /* #swagger.tags = ['Cart'] */
+  CartController.fetchCartByUserId
+);
 
 // 新增購物車項目
-router.post("/:userId", CartController.addActivityToCart);
+router.post(
+  "/:userId",
+  /* #swagger.tags = ['Cart'] */
+  CartController.addActivityToCart
+);
 
 // 移出購物車項目
-router.delete("/:userId/:activityId", CartController.removeActivityFromCart);
+router.delete(
+  "/:userId/:activityId",
+  /* #swagger.tags = ['Cart'] */
+  CartController.removeActivityFromCart
+);
 
 // 清空購物車
-router.delete("/:uid/clear", CartController.removeCartItems);
+router.delete(
+  "/:uid/clear",
+  /* #swagger.tags = ['Cart'] */
+  CartController.removeCartItems
+);
 
 // 獲取被選中的購物車項目
-router.get("/:userId/selected", CartController.getSelectedItems);
+router.get(
+  "/:userId/selected",
+  /* #swagger.tags = ['Cart'] */
+  CartController.getSelectedItems
+);
 
 // 更改購物車項目被選中狀態
-router.put("/:id/update-selection", CartController.updateSelection);
+router.put(
+  "/:id/update-selection",
+  /* #swagger.tags = ['Cart'] */
+  CartController.updateSelection
+);
 
 export default router;
